Using URL instead of URI. Defined a new protocol handler